src/objects/AP_RC_EP__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected action plan is not of the type &apos;Root Cause/Escape Point Analysis&apos;.</errorMessage>
            <filterItems>
                <field>QIRS_Action_Plan__c.Action_Type__c</field>
                <operation>equals</operation>
                <value>Root Cause/Escape Point Analysis</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIRS_Action_Plan__c</referenceTo>
        <relationshipLabel>Root Cause / Escape Point</relationshipLabel>
        <relationshipName>Root_Cause_Escape_Point</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Repair Process</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design (HW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design (SW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Hardware/System Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Manf. Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Repair Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced Hardware/System Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced Manf. Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Material-Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escape_Point_Definition__c</fullName>
        <label>Escape Point Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Definition__c</fullName>
        <label>Root Cause Definition</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AP_RC#_EP#</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>RC# Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Cause / Escape Point</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>